# Arkyide

./: .settings.json  3pgithub_tools_in_arkyide.txt  Arkyide.py  CONTRIBUTING.md  Pipfile  README.md  ark0.0.7(stable).py  arkyide.py  dockerfile  dockerfile.build  dockerfile.test  pyproject.toml  requirements.txt
.github/workflows/: Build_and_test_workflow.yml
lib/: ARKTLinstaller.py  anon.py  arp_spoofer.py  change_mac.py  mail_bomber.py  net_scan.py  tools_names.txt  toolswlinks.txt
lib/artl/: artl.py
lib/shaCracker/: combo_list.csv  sha_cracker.py
lib/theEYE/: domain_harvester.py  ip_info.py  mail_harvester.py  theEYE.py  whois.py
lib/theEYE/phonenumber_info/: phonenumber_info.py  phonenumber_types.txt
tests/: test_arkyide.py  test_netscan.py
